--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body{
+    background-image: url(Images/Fond/menu-background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+}
+
 * {
     margin: 0;
     padding: 0;
