--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #f5f2f2;
     color: #333;
     line-height: 1.6;
     margin: 0;
@@ -22,9 +22,9 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #148bcf;
     color: #fff;
-    padding: 10px 0;
+    padding: 8px 0;
     text-align: center;
 }
 
@@ -136,7 +136,7 @@ h1 {
 
 
 footer {
-    background-color: #333;
+    background-color: #148bcf;
     color: #fff;
     text-align: center;
     padding: 3px 0;
